--- a/Sales/Sales/App.xaml
+++ b/Sales/Sales/App.xaml
@@ -9,6 +9,8 @@
             <infra:InstanceLocator x:Key="Locator"/>
             <!--Url api-->
             <x:String x:Key="UrlApi">https://salesapiservices.azurewebsites.net</x:String>
+            <x:String x:Key="UrlPrefix">/api</x:String>
+            <x:String x:Key="UrlProductsController">/Products</x:String>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
