--- a/Sales/Sales/Views/AddProductPage.xaml
+++ b/Sales/Sales/Views/AddProductPage.xaml
@@ -11,7 +11,10 @@
             <StackLayout
                 Padding="5">
                 <Image
-                    Source="noproduct">                    
+                    Source="{Binding ImageSource}">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding ChangeImageCommand}"/>
+                    </Image.GestureRecognizers>
                 </Image>
                 <Label
                         FontSize="Small"
@@ -29,7 +32,7 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-               
+
                     <Label
                         Grid.Column="0"
                         Grid.Row="0"
@@ -67,7 +70,7 @@
                         Text="{Binding Remarks}"
                          VerticalOptions="FillAndExpand">
                     </Editor>
-                </Grid>               
+                </Grid>
                 <ActivityIndicator
                     IsRunning="{Binding IsRunning}"
                     VerticalOptions="CenterAndExpand">
