--- a/Sales/Sales/Views/ProductsPage.xaml
+++ b/Sales/Sales/Views/ProductsPage.xaml
@@ -28,10 +28,14 @@
                                 <MenuItem Text="{i18n:Translate Delete}" Command="{Binding DeleteProductCommand}" IsDestructive="True"/>
                             </ViewCell.ContextActions>
                             <Grid>
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding EditProductCommand}"/>
+                                </Grid.GestureRecognizers>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="2*"/>
-                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <Image
                                     Grid.Column="0"
@@ -48,14 +52,19 @@
                                     <Label                                                                                                          
                                     Text="{Binding Remarks}">
                                     </Label>
-                                </StackLayout>
-                                
+                                </StackLayout>                                
                                 <Label
                                     Grid.Column="2"
                                     HorizontalOptions="End"
                                     Text="{Binding Price, StringFormat='{0:C2}'}" 
                                     VerticalOptions="Center">
                                 </Label>
+                                <Image
+                                    Grid.Column="3"
+                                    Source="ic_launcher"
+                                    VerticalOptions="Center">
+                                    
+                                </Image>
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
