--- a/Sales/Sales/Views/ProductsPage.xaml
+++ b/Sales/Sales/Views/ProductsPage.xaml
@@ -6,15 +6,20 @@
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="{i18n:Translate Products}">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Icon="ic_action_add_circle" Command="{Binding AddProductCommand}">
-            
-        </ToolbarItem>
+        <ToolbarItem Icon="ic_action_add_circle" Command="{Binding AddProductCommand}"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout 
             BindingContext="{Binding Products}"
             Padding="5">
-            <ListView
+            <SearchBar
+                HeightRequest="30"
+                Placeholder="{i18n:Translate Search}"
+                SearchCommand="{Binding SearchCommand}"
+                Text="{Binding Filter}">
+                
+            </SearchBar>
+                <ListView
                 HasUnevenRows="True"
                 IsRefreshing="{Binding IsRefreshing}"
                 IsPullToRefreshEnabled="True"
