--- a/Sales/Sales/Views/ProductsPage.xaml
+++ b/Sales/Sales/Views/ProductsPage.xaml
@@ -6,7 +6,8 @@
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="{i18n:Translate Products}">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Icon="ic_action_add_circle" Command="{Binding AddProductCommand}"/>
+        <ToolbarItem Icon="ic_action_add_circle" Command="{Binding AddProductCommand}">
+        </ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout 
