--- a/Sales/Sales/Views/MenuPage.xaml
+++ b/Sales/Sales/Views/MenuPage.xaml
@@ -20,8 +20,9 @@
                 TextColor="White">
             </Label>
             <ListView 
-                ItemsSource="{Binding Menu}"
-                HasUnevenRows="True">
+                ItemsSource="{Binding Menu}"                
+                HasUnevenRows="True"
+                SeparatorVisibility="None">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
