--- a/Sales/Sales/Views/MenuPage.xaml
+++ b/Sales/Sales/Views/MenuPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              xmlns:i18n="clr-namespace:Sales.Helpers"
              x:Class="Sales.Views.MenuPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
@@ -9,9 +10,12 @@
     <ContentPage.Content>
         <StackLayout
             Padding="5">
-            <Image
-                Source="sales">
-            </Image>
+            <controls:CircleImage  
+                Source="{Binding UserImageFullPath}"
+                Aspect="AspectFill"
+                WidthRequest="200"
+                HeightRequest="200">
+            </controls:CircleImage>
             <Label
                 FontAttributes="Bold"
                 FontSize="Large"
